<resources>
    <string name="app_name">NFL</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    // ranking layout
    <string name="ranking_title">Ranking</string>
    <string name="conference">Conference</string>
    <string name="division">Division</string>
    <string name="afc">AFC</string>
    <string name="nfc">NFC</string>
    <string name="west">West</string>
    <string name="east">East</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="all">All</string>

    <string name="content_authority">com.example.x61224.nfl</string>
    <string name="sync_account_type">nfl.example.com</string>
    <string name="title_activity_roster">RosterActivity</string>
    <string name="roster_title">Roster</string>
</resources>
