<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RankingActivityFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ranking_title"
        android:text="@string/ranking_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/conference_label"
        android:text="@string/conference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/conference_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/afc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/afc"/>
        <RadioButton
            android:id="@+id/nfc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc"/>
    </RadioGroup>

    <TextView
        android:id="@+id/division_label"
        android:text="@string/division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/division_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/north_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/north"/>
        <RadioButton
            android:id="@+id/south_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/south"/>
        <RadioButton
            android:id="@+id/west_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/west"/>
        <RadioButton
            android:id="@+id/east_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/east"/>
        <RadioButton
            android:id="@+id/all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"/>
    </RadioGroup>

    <ListView
        android:id="@+id/ranking_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>
